Issue #2072203 by johnv: Moved all node API functions from module file to node.inc file, to facilitate introduction of field API.
Issue #2072081 by johnv: Fixed typo in workflow_node_tab_access().
Issue #2077693 by johnv: Added Field API support in workflow_field_choices().
Issue #2078785 by johnv: Added Field API support in workflow_node_tab_access().
Issue #2079017 by johnv: Added Field API support for workflow_execute_transition().
Issue #2080857 by johnv: Added Field API support for workflow_tab_page().
Issue #2080915 by NancyDru: Signal Rules on reversion.
Issue #2082225 by johnv: Changed interface of hook_workflow() (new optional parameter) to support Field API.
Issue #2082247 by johnv: Added caching to workflow_field_choices().
Issue #1357406 by pikku-h: Fixed Cron Scheduling keeps repeating if Old state and New state are the same.
Issue #2019345 by johnv: Create a Workflow Field, with basic options.
Issue #2087851 by ttkaminski: Fixed failing upgrade 7001 due to missing function: workflow_get_workflows().
Issue #2042345 by arpeggio, rickdonohoe, johnv: Added dependency on "Views>3.3" to Workflow Views submodule.
Issue #2019345 by johnv: Added helper function _workflow_get_sid_by_items() for Workflow Field.
Issue #2094031 by johnv: Added return parameter to workflow_execute_transition().
Issue #2019345 by johnv: Added classes for WorkflowDefaultWidget, WorkflowItem (Field type), Workflow, WorkflowState.
Issue #2019345 by johnv: Fixed Field API: do not save node, when a scheduled state chage is posed on a comment.
Issue #884788 by gdud, liquidcms: Fixed Views field "State: Current state name" isn't translated.
Issue #2086287 by dooug: Fixed many typos in workflow and sub-modules.
Issue #2086605 by johnv: Added settings to hide TimeZone for "Schedule for state change" option.
Issue #2019345 by johnv: Fixed #states to hide/show scheduling info in Workflow Field Widget.