@@ -6,6 +6,7 @@ files[] = workflow.pages.inc
 
 files[] = includes/Entity/Workflow.php
 files[] = includes/Entity/WorkflowState.php
+files[] = includes/Entity/WorkflowScheduledTransition.php
 files[] = includes/Field/WorkflowD7Base.php
 files[] = includes/Field/WorkflowItem.php
 files[] = includes/Field/WorkflowDefaultWidget.php
