@@ -155,22 +155,41 @@ function workflow_theme() {
 function workflow_cron() {
   $clear_cache = FALSE;
   // If the time now is greater than the time to execute a transition, do it.
-  foreach (workflow_get_workflow_scheduled_transition_by_between() as $row) {
-    $node = node_load($row->nid);
+  foreach (WorkflowScheduledTransition::loadBetween() as $scheduled_transition) {
+    $node = $scheduled_transition->getEntity();
 
-    // If they didn't give a comment, create one.
-    if (empty($row->comment)) {
-      $row->comment = t('Scheduled by user @uid.', array('@uid' => $row->uid));
+    // If user didn't give a comment, create one.
+    if (empty($scheduled_transition->comment)) {
+      $scheduled_transition->addDefaultComment();
     }
+
+    // A Field API will return a WorkflowItem. A Node API will not.
+    $workflowItem = $scheduled_transition->getWorkflowItem();
+    $field_info = ($workflowItem) ? $workflowItem->getFieldInfo() : array() ;
+    $current_sid = workflow_node_current_state($node, $field_info);
 
     // Make sure transition is still valid; i.e., the node is
     // still in the state it was when the transition was scheduled.
-    if ($node->workflow == $row->old_sid) {
+    if ($current_sid == $scheduled_transition->old_sid) {
       // Save the user who wanted this.
-      $node->workflow_uid = $row->uid;
+      $node->workflow_uid = $scheduled_transition->uid;
 
       // Do transition. Force it because user who scheduled was checked.
-      workflow_execute_transition($node, $row->sid, $row->comment, TRUE);
+      // The scheduled transition is also deleted from DB.
+      $new_sid = $scheduled_transition->new_sid;
+      workflow_execute_transition($node, $new_sid, $scheduled_transition->comment, TRUE, $field_info, $current_sid);
+
+      if ($field_info) {
+        // Only in case of Workflow Field API (not for Workflow Node API), do a separate update,
+        // because $workflowItem only works on Node form and Comment form.
+        // @todo: move this to a better place.
+        $items[0]['value'] = $new_sid;
+        $field_name = $field_info['field_name'];
+//        $workflowItem->update($items);
+        $node->{$field_name}['und'] = $items;
+        $workflowItem->entitySave('node', $node);
+      }
+    
       watchdog('content', '%type: scheduled transition of %title.',
         array('%type' => t($node->type), '%title' => $node->title), WATCHDOG_NOTICE, l(t('view'), 'node/' . $node->nid));
       $clear_cache = TRUE;
@@ -179,7 +198,7 @@ function workflow_cron() {
       // Node is not in the same state it was when the transition
       // was scheduled. Defer to the node's current state and
       // abandon the scheduled transition.
-      workflow_delete_workflow_scheduled_transition_by_nid($node->nid);
+      $scheduled_transition->delete();
     }
   }
   if ($clear_cache) {
@@ -247,7 +266,7 @@ function workflow_transition($node, $new_sid, $force = FALSE, $field = NULL) {
       workflow_execute_transition($node, $new_sid, (isset($node->workflow_comment) ? $node->workflow_comment : NULL), $force, $field);
     }
     else {
-      // Schedule the the time to change the state.
+      // Schedule the time to change the state.
       $old_sid = workflow_node_current_state($node, $field);
       if ($node->workflow_scheduled_date['day'] < 10) {
         $node->workflow_scheduled_date['day'] = '0' .
@@ -261,7 +280,7 @@ function workflow_transition($node, $new_sid, $force = FALSE, $field = NULL) {
         $node->workflow_scheduled_hour = '00:00';
       }
 
-      $scheduled = $node->workflow_scheduled_date['year']
+      $scheduled_date_time = $node->workflow_scheduled_date['year']
         . $node->workflow_scheduled_date['month']
         . $node->workflow_scheduled_date['day']
         . ' '
@@ -270,24 +289,17 @@ function workflow_transition($node, $new_sid, $force = FALSE, $field = NULL) {
         . $node->workflow_scheduled_timezone
         ;
 
-      if ($scheduled = strtotime($scheduled)) {
+      if ($stamp = strtotime($scheduled_date_time)) {
         // Clear previous entries and insert.
-        $data = array(
-          'nid' => $node->nid,
-          'old_sid' => $old_sid,
-          'sid' => $new_sid,
-          'uid' => $user->uid,
-          'scheduled' => $scheduled,
-          'comment' => $node->workflow_comment,
-          );
+        $scheduled_transition = new WorkflowScheduledTransition($node, $old_sid, $new_sid, $user->uid, $stamp, $node->workflow_comment);
+        $scheduled_transition->save();
 
-        workflow_insert_workflow_scheduled_transition($data);
         // Get name of state.
-        if ($state = workflow_get_workflow_states_by_sid($new_sid)) {
+        if ($state = new WorkflowState($new_sid)) {
           $t_args = array(
               '@node_title' => $node->title,
-              '%state_name' => t($state->state),
-              '%scheduled_date' => format_date($scheduled),
+              '%state_name' => t($state->getName()),
+              '%scheduled_date' => format_date($stamp),
               );
           watchdog('workflow', '@node_title scheduled for state change to %state_name on %scheduled_date', $t_args,
             WATCHDOG_NOTICE, l('view', 'node/' . $node->nid . '/workflow'));
@@ -512,7 +524,8 @@ function workflow_execute_transition($node, $new_sid, $comment = NULL, $force = 
       unset($node->workflow_comment);
       $result = module_invoke_all('workflow', 'transition post', $old_sid, $new_sid, $node, $force, $field);
     }
-    workflow_delete_workflow_scheduled_transition_by_nid($node->nid);
+    $scheduled_transition = new WorkflowScheduledTransition($node);
+    $scheduled_transition->delete();
     return $old_sid;
   }
 
@@ -581,7 +594,8 @@ function workflow_execute_transition($node, $new_sid, $comment = NULL, $force = 
   module_invoke_all('workflow', 'transition post', $old_sid, $new_sid, $node, $force, $field);
 
   // Clear any references in the scheduled listing.
-  workflow_delete_workflow_scheduled_transition_by_nid($node->nid);
+  $scheduled_transition = new WorkflowScheduledTransition($node);
+  $scheduled_transition->delete();
   return $new_sid;
 }
 
@@ -903,7 +917,7 @@ function workflow_get_workflows_by_type($node_type, $entity_type = '') {
       foreach( field_info_instances($entity_type, $entity_bundle) as $field_name => $field) {
         $field_info = field_info_field($field['field_name']);
         $field_type = $field_info['type'];
-        if ($field_type == 'workflowfield') {
+        if ($field_type == 'workflow') {
           $wid = $field_info['settings']['wid'];
         }
       }
@@ -1371,14 +1385,15 @@ function workflow_update_workflow_states(&$data) {
 
 /**
  * Given a node, get all scheduled transitions for it.
+ * @deprecated: workflow_get_workflow_scheduled_transition_by_nid() --> WorkflowScheduledTransition::load()
  */
 function workflow_get_workflow_scheduled_transition_by_nid($nid) {
-  $results = db_query('SELECT nid, old_sid, sid, uid, scheduled, comment FROM {workflow_scheduled_transition} WHERE nid = :nid ORDER BY scheduled ASC', array(':nid' => $nid));
-  return $results->fetchAll();
+  return WorkflowScheduledTransition::load($nid);
 }
 
 /**
  * Given a timeframe, get all scheduled transitions.
+ * @deprecated: workflow_get_workflow_scheduled_transition_by_between() --> WorkflowScheduledTransition::loadBetween()
  */
 function workflow_get_workflow_scheduled_transition_by_between($start = 0, $end = REQUEST_TIME) {
   $results = db_query('SELECT nid, old_sid, sid, uid, scheduled, comment FROM {workflow_scheduled_transition} WHERE scheduled > :start AND scheduled < :end ORDER BY scheduled ASC', array(':start' => $start, ':end' => $end));
@@ -1386,10 +1401,23 @@ function workflow_get_workflow_scheduled_transition_by_between($start = 0, $end 
 }
 
 /**
+ * Insert a new scheduled transition.
+ * Only one transition at a time (for now).
+ * @deprecated: workflow_insert_workflow_scheduled_transition() --> WorkflowScheduledTransition::save()
+ */
+function workflow_insert_workflow_scheduled_transition($data) {
+  $data = (object) $data;
+  workflow_delete_workflow_scheduled_transition_by_nid($data->nid);
+  drupal_write_record('workflow_scheduled_transition', $data);
+}
+
+/**
  * Given a node, delete transitions for it.
+ * @deprecated: workflow_delete_workflow_scheduled_transition_by_nid() --> WorkflowScheduledTransition::delete()
+ *        It is still used in workflow_execute_transition().
  */
 function workflow_delete_workflow_scheduled_transition_by_nid($nid) {
-  return db_delete('workflow_scheduled_transition')->condition('nid', $nid)->execute();
+  return WorkflowScheduledTransition::deleteByNid($nid);
 }
 
 /**
@@ -1467,15 +1495,6 @@ function workflow_allowable_transitions($sid, $dir = 'to', $roles = 'ALL') {
   return $transitions;
 }
 
-/**
- * Insert a new scheduled transition.
- * Only one transition at a time (for now).
- */
-function workflow_insert_workflow_scheduled_transition($data) {
-  $data = (object) $data;
-  workflow_delete_workflow_scheduled_transition_by_nid($data->nid);
-  drupal_write_record('workflow_scheduled_transition', $data);
-}
 
 /**
  * Functions related to table workflow_node_history.
