@@ -186,3 +186,4 @@ Issue #884788 by gdud, liquidcms: Fixed Views field "State: Current state name" 
 Issue #2086287 by dooug: Fixed many typos in workflow and sub-modules.
 Issue #2086605 by johnv: Added settings to hide TimeZone for "Schedule for state change" option.
 Issue #2019345 by johnv: Fixed #states to hide/show scheduling info in Workflow Field Widget.
+Issue #2095467 by johnv: Changed flow logic to use new class WorkflowScheduledTransition.
